// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TSCard card"
    >
      <div
        className="cardHeader card-header"
      >
        Header
      </div>
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          Title
        </div>
        <div
          className="mb-2 text-muted card-subtitle h6"
        >
          Subtitle
        </div>
        <hr
          style={
            Object {
              "color": "rgb(134, 134, 146)",
            }
          }
        />
        <p
          className="card-text"
        >
          This is the body
        </p>
      </div>
      <div
        className="text-muted card-footer"
      >
        Footer
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Card Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TSCard card"
    >
      
      <div
        className="card-body"
      >
        
        
        <p
          className="card-text"
        >
          
        </p>
      </div>
      
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="App-header"
    >
      <div
        className="title"
      >
        Paris
      </div>
      <div
        className="subtitle"
      >
        France
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="App-header"
    >
      <div
        className="title"
      >
        Paris
      </div>
      <div
        className="subtitle"
      >
        France
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Navbar Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="Navbar navbar navbar-expand navbar-dark fixed-top"
    >
      <span
        className="navbar-brand"
        href=""
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="45"
          src="logo.png"
          width="45"
        />
        <span
          className="title navbar-text"
        >
          Traveling Strategy
        </span>
      </span>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
      >
        <span
          className="navbar-text"
        >
          <a
            href=""
          >
            Login
          </a>
        </span>
      </div>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Navbar Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="Navbar navbar navbar-expand navbar-dark fixed-top"
    >
      <span
        className="navbar-brand"
        href=""
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="45"
          src="logo.png"
          width="45"
        />
        <span
          className="title navbar-text"
        >
          Traveling Strategy
        </span>
      </span>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
      >
        <span
          className="navbar-text"
        >
          <a
            href=""
          >
            Login
          </a>
        </span>
      </div>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
